testsuite/tests/checks/global_variables_basic/test.out
foo.ads:2:5: error: global variable
2 |     Var1 : Integer;    --  FLAG
  |     ^^^^ 

foo.ads:5:5: error: global variable
5 |     Var2 : Boolean;    --  FLAG
  |     ^^^^ 

